--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_dc33332a299fc17"
   },
   "eslintConfig": {
     "extends": [
@@ -53,5 +54,7 @@
     "prop-types": "^15.8.1",
     "storybook": "^7.0.18",
     "webpack": "^5.85.0"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "first_story@0.1.0"
 }
